# esmi_ib_library

./: CMakeLists.txt  License.txt  README.md  e_smi.pc.in
DEBIAN/: postinst  prerm
RPM/: rpm_post  rpm_postun
cmake_modules/: utils.cmake  version_util.sh
docs/: README.md  RELEASENOTES.md  esmi_doxygen.cfg  release_notes_doxygen.cfg
example/: e_smi_example.c  e_smi_tool.c
include/asm/: amd_hsmp.h
include/e_smi/: e_smi.h  e_smi64Config.h  e_smi_monitor.h  e_smi_utils.h
src/: e_smi.c  e_smi64Config.in  e_smi_monitor.c  e_smi_plat.c  e_smi_utils.c
tools/: e_smi_tool.c
